--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,45 @@
 .App {
   /* text-align: center; */
 }
+.nav{
+  display: flex;
+  justify-content: center;
+  background-color: #1b1b32;
+  
+}
 
 .nav-active button {
-  background-color: blue;  
+  background-color: rgb(196, 91, 91); 
+  margin: 20px; 
+  border-radius: 20px;
 }
 .nav-inactive button {
-  background-color: red;  
+  background-color: rgb(87, 87, 240);  
+  margin: 20px; 
+  border-radius: 20px;
 }
 .spinner {
   display: flex;
   justify-content: center;
   /* align-items: center; */
   margin-top: 50vh;
+}
+
+.calles-container-body{
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+
+  display: flex; 
+  justify-content: space-evenly;
+  flex-Wrap:wrap;  
+
+  height: 100vh;
+
+  background: url(../public/fondo-calle.jpg) no-repeat center center fixed;
+  background-size: cover;
+  
+
+  color: rgb(87, 87, 240);
+
 }
